--- a/public/themes/default/public/footer/footer.html
+++ b/public/themes/default/public/footer/footer.html
@@ -18,25 +18,25 @@
       <!-- 链接 -->
       <div class="footer_box_top_link">
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Hainan</div>
+          <div class="footer_box_top_link_item_title">海南</div>
           <div class="footer_box_top_link_item_subitem">Area A, Oasis Industrial Park, Meilan, Haikou, China</div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Beijing</div>
+          <div class="footer_box_top_link_item_title">北京</div>
           <div class="footer_box_top_link_item_subitem">Room 1710, Building A, Wanda Plaza, Chaoyang, Beijing, China
           </div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Dublin</div>
+          <div class="footer_box_top_link_item_title">都柏林</div>
           <div class="footer_box_top_link_item_subitem">16 Herbert Pl, Dublin 2, Ireland</div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Ennis</div>
+          <div class="footer_box_top_link_item_title">恩尼斯</div>
           <div class="footer_box_top_link_item_subitem">Suite 3, Áras Smith O’Brien Bank Place, Ennis, Co.Clare, Ireland
           </div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Abu Dhabi</div>
+          <div class="footer_box_top_link_item_title">迪拜</div>
           <div class="footer_box_top_link_item_subitem">14th Floor, Al Khatem Tower, Al Maryah Island, Abu Dhabi, UAE
           </div>
         </div>
