--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -14,7 +14,8 @@
     <div class="header_box_container">
       <div class="header_box_topnav">
         <li>
-          <a class="header_box_nav_item_index" href="{:cmf_url('portal/index/index')}">Home</a>
+          <a class="header_box_nav_item_index"
+            href="{:cmf_url('portal/index/index?_design_theme=default_en-us')}">Home</a>
           <a> | </a>
           <a href="?_design_theme=default"> 简中 </a> <a> | </a>
 
