--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -32,11 +32,13 @@
               aria-expanded="true">
               Products</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li class="dropdown-menu-item"><a href="{:cmf_url('portal/Products/index')}">Products</a></li>
+              <li class="dropdown-menu-item"><a
+                  href="{:cmf_url('portal/Products/index?_design_theme=default_en-us')}">Products</a></li>
               <li role="separator" class="divider"></li>
               <portal:subCategories categoryId="35" item="vo">
                 <li class="dropdown-menu-item"><a
-                    href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}">{$vo.name}</a></li>
+                    href="{:cmf_url('portal/List/index?_design_theme=default_en-us',array('id'=>$vo.id))}">{$vo.name}</a>
+                </li>
                 <li role="separator" class="divider"></li>
               </portal:subCategories>
             </ul>
@@ -48,11 +50,13 @@
               href="{:cmf_url('portal/Supplychain/index?_design_theme=default_en-us')}" class="dropdown-toggle"
               id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Supply Chain</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li class="dropdown-menu-item"><a href="{:cmf_url('portal/Supplychain/index')}">Supply Chain</a></li>
+              <li class="dropdown-menu-item"><a
+                  href="{:cmf_url('portal/Supplychain/index?_design_theme=default_en-us')}">Supply Chain</a></li>
               <li role="separator" class="divider"></li>
               <portal:subCategories categoryId="130" item="vo">
                 <li class="dropdown-menu-item"><a
-                    href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}">{$vo.name}</a></li>
+                    href="{:cmf_url('portal/List/index?_design_theme=default_en-us',array('id'=>$vo.id))}">{$vo.name}</a>
+                </li>
                 <li role="separator" class="divider"></li>
               </portal:subCategories>
             </ul>
@@ -64,11 +68,13 @@
               href="{:cmf_url('portal/Carbontrace/index?_design_theme=default_en-us')}" class="dropdown-toggle"
               id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Carbon Trace</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li class="dropdown-menu-item"><a href="{:cmf_url('portal/Carbontrace/index')}">Carbon Trace</a></li>
+              <li class="dropdown-menu-item"><a
+                  href="{:cmf_url('portal/Carbontrace/index?_design_theme=default_en-us')}">Carbon Trace</a></li>
               <li role="separator" class="divider"></li>
               <portal:subCategories categoryId="133" item="vo">
                 <li class="dropdown-menu-item"><a
-                    href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}">{$vo.name}</a></li>
+                    href="{:cmf_url('portal/List/index?_design_theme=default_en-us',array('id'=>$vo.id))}">{$vo.name}</a>
+                </li>
                 <li role="separator" class="divider"></li>
               </portal:subCategories>
             </ul>
@@ -80,11 +86,13 @@
               class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="true">Warehouse</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li class="dropdown-menu-item"><a href="{:cmf_url('portal/Warehouse/index')}">Warehouse</a></li>
+              <li class="dropdown-menu-item"><a
+                  href="{:cmf_url('portal/Warehouse/index?_design_theme=default_en-us')}">Warehouse</a></li>
               <li role="separator" class="divider"></li>
               <portal:subCategories categoryId="136" item="vo">
                 <li class="dropdown-menu-item"><a
-                    href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}">{$vo.name}</a></li>
+                    href="{:cmf_url('portal/List/index?_design_theme=default_en-us',array('id'=>$vo.id))}">{$vo.name}</a>
+                </li>
                 <li role="separator" class="divider"></li>
               </portal:subCategories>
             </ul>
@@ -96,11 +104,13 @@
               class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="true">Building Design</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li class="dropdown-menu-item"><a href="{:cmf_url('portal/Building/index')}">Building Design</a></li>
+              <li class="dropdown-menu-item"><a
+                  href="{:cmf_url('portal/Building/index?_design_theme=default_en-us')}">Building Design</a></li>
               <li role="separator" class="divider"></li>
               <portal:subCategories categoryId="138" item="vo">
                 <li class="dropdown-menu-item"><a
-                    href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}">{$vo.name}</a></li>
+                    href="{:cmf_url('portal/List/index?_design_theme=default_en-us',array('id'=>$vo.id))}">{$vo.name}</a>
+                </li>
                 <li role="separator" class="divider"></li>
               </portal:subCategories>
             </ul>
